content/manual/v7.0/source/includes/driver-examples/driver-example-query-41.rst
.. tabs-drivers::

   tabs:
     - id: shell
       content: |

         .. literalinclude:: /code-examples/tested/command-line/mongosh/tutorial/query-for-null-fields/find-missing-field.snippet.find-missing-field.js
            :language: javascript
            :category: usage example

     - id: compass
       content: |
         Copy the following query filter document into the
         :ref:`query bar <compass-query-bar>` and click
         :guilabel:`Find`:

         
         .. code-block:: javascript

            { item : { $exists: false } }

         .. figure:: /images/compass-find-null-existence-check.png
            :alt: Query for null value

     - id: c
       content: |

         .. literalinclude:: /driver-examples/test-mongoc-sample-commands.c
            :language: c
            :dedent: 3
            :start-after: Start Example 41
            :end-before: End Example 41

         .. include:: /includes/driver-examples/driver-example-c-cleanup.rst

     - id: python
       content: |

         .. literalinclude:: /driver-examples/test_examples.py
            :language: python
            :dedent: 8
            :start-after: Start Example 41
            :end-before: End Example 41

     - id: motor
       content: |

         .. literalinclude:: /driver-examples/test_examples_motor.py
            :language: python
            :dedent: 8
            :start-after: Start Example 41
            :end-before: End Example 41

     - id: java-sync
       content: |

         .. literalinclude:: /driver-examples/DocumentationSamples.java
            :language: java
            :dedent: 8
            :start-after: Start Example 41
            :end-before: End Example 41

     - id: java-async
       content: |

         .. literalinclude:: /driver-examples/AsyncDocumentationSamples.java
            :language: java
            :dedent: 8
            :start-after: Start Example 41
            :end-before: End Example 41

     - id: kotlin-coroutine
       content: |

         .. literalinclude:: /driver-examples/kotlin_examples.kt
            :language: kotlin
            :dedent:
            :start-after: Start Example 41
            :end-before: End Example 41

     - id: nodejs
       content: |
         .. literalinclude:: /driver-examples/node_query_for_null_fields.js
            :language: javascript
            :dedent: 6
            :start-after: Start Example 41
            :end-before: End Example 41

     - id: php
       content: |

         .. literalinclude:: /driver-examples/DocumentationExamplesTest.php
            :language: php
            :dedent: 8
            :start-after: Start Example 41
            :end-before: End Example 41

     - id: ruby
       content: |

         .. literalinclude:: /driver-examples/shell_examples_spec.rb
            :language: ruby
            :dedent: 8
            :start-after: Start Example 41
            :end-before: End Example 41

     - id: scala
       content: |

         .. literalinclude:: /driver-examples/DocumentationExampleSpec.scala
            :language: scala
            :dedent: 4
            :start-after: Start Example 41
            :end-before: End Example 41

     - id: csharp
       content: |

         .. literalinclude:: /driver-examples/DocumentationExamples.cs
            :language: csharp
            :dedent: 12
            :start-after: Start Example 41
            :end-before: End Example 41

     - id: go
       content: |
         .. literalinclude:: /driver-examples/go_examples.go
            :language: go
            :dedent: 2
            :start-after: Start Example 41
            :end-before: End Example 41
